--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Cryptochain with React</title>
-  </head>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+</head>
 
-  <body>
-    <div>Welcome to Smart Chain</div>
+<body>
+    <img class="root" src="./assets/logo.png" style="widows: 300px;height: 250px">
     <div id="root"></div>
     <script src="index.js"></script>
-  </body>
+</body>
+
 </html>
